[package]
name = "nonempty-containers"
version = "0.0.4"
authors = [
    "Mohammad Abbas <mohammad.abbas23@imperial.ac.uk>",
    "Lancelot Liu <lancelot.liu23@imperial.ac.uk>",
]
edition = "2021"
description = "Fast, zero-cost conversion, and fully inter-operable nonempty container types."
readme = "README.md"
repository = "https://github.com/Funky-Farm/nonempty-containers"
license = "MIT"
keywords = ["non-empty", "nonempty", "container", "functional"]
categories = ["data-structures"]
rust-version = "1.65"

[dependencies]
# Language: Arbitrary data structure generation. Tied to the `arbitrary` feature.
arbitrary = { features = ["derive"], optional = true, version = "1.4.1" }

[features]
# Allows arbitrary generation of non-empty containers.
arbitrary = ["dep:arbitrary"]
